<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hipster_background_tiny">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_row="1"
            android:layout_column="2"
            android:id="@+id/activity_filter_relative_layout"
            android:backgroundTint="#e4dfdf">

            <TextView
                android:id="@+id/filter_activity_header"
                android:text="Activity Filter"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Categories"
                android:layout_marginTop="10dp"
                android:layout_below="@id/filter_activity_header"
                android:id="@+id/filter_categories_header" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filter_category_grid"
                android:layout_below="@id/filter_categories_header"
                android:rowOrderPreserved="true"
                android:columnCount="2"
                android:rowCount="6">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_sport_label"
                    android:id="@+id/cat_sport_checkBox"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_art_label"
                    android:id="@+id/cat_art_checkbox"
                    android:checked="false"
                    android:layout_row="1"
                    android:layout_column="0" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_adventure_label"
                    android:id="@+id/cat_adventure_checkbox"
                    android:checked="false"
                    android:layout_row="2"
                    android:layout_column="0" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_entertainment_label"
                    android:id="@+id/cat_entertainment_checkbox"
                    android:checked="false"
                    android:layout_row="0"
                    android:layout_column="1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_food_label"
                    android:id="@+id/cat_food_checkbox"
                    android:checked="false"
                    android:layout_row="1"
                    android:layout_column="1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_other_label"
                    android:id="@+id/cat_other_checkbox"
                    android:checked="false"
                    android:layout_row="2"
                    android:layout_column="1" />
            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Maximum Price (pp)"
                android:layout_marginTop="10dp"
                android:layout_below="@id/filter_category_grid"
                android:id="@+id/filter_pricerange_header" />

            <RadioGroup
                android:id="@+id/price_range_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/filter_pricerange_header"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:divider="#1f1f1f">

                <RadioButton
                    android:id="@+id/price_range_button01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range01"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/price_range_button02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range02"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/price_range_button03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range03"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/price_range_button04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range04"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/price_range_button05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range05"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Maximum Time"
                android:layout_marginTop="10dp"
                android:layout_below="@id/price_range_group"
                android:id="@+id/filter_timerange_header" />

            <RadioGroup
                android:id="@+id/time_range_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/filter_timerange_header"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:divider="#1f1f1f">

                <RadioButton
                    android:id="@+id/time_range_button01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range01"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/time_range_button02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range02"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/time_range_button03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range03"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/time_range_button04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range04"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/time_range_button05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range05"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Minimum Rating"
                android:layout_marginTop="10dp"
                android:layout_below="@id/time_range_group"
                android:id="@+id/rating_range_header" />

            <RadioGroup
                android:id="@+id/rating_range_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating_range_header"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:divider="#1f1f1f"
                android:measureWithLargestChild="false">

                <RadioButton
                    android:id="@+id/rating_range_button00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_range00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rating_range_button01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_range01"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="false" />

                <RadioButton
                    android:id="@+id/rating_range_button02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_range02"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="false" />

                <RadioButton
                    android:id="@+id/rating_range_button03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating_range03"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="false" />

                <RadioButton
                    android:id="@+id/rating_range_button04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_range04"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="false" />

                <RadioButton
                    android:id="@+id/rating_range_button05"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_range05"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Keywords"
                android:layout_marginTop="10dp"
                android:layout_below="@id/rating_range_group"
                android:id="@+id/keywords_header" />

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/keyword_input_linear_layout"
                android:layout_below="@id/keywords_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add"
                    android:id="@+id/add_keyword_button" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/keyword_editbox" />

            </LinearLayout>

            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/keyword_gridView"
                android:numColumns="auto_fit"
                android:gravity="center"
                android:stretchMode="columnWidth"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/keyword_input_linear_layout"
                >
            </GridView>

        </RelativeLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/filter_apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_24dp" />

</android.support.design.widget.CoordinatorLayout>
